# archetype-py

./: CHANGELOG.md  PYPI.md  README.md  pyproject.toml
.github/workflows/: archetype.yml  ci.yml  publish.yml
archetype/: baseline.py  check.py  config.py  reporter.py  rule.py
archetype/analysis/: cache.py  git_utils.py  imports.py  models.py  path_filters.py  pattern.py
archetype/dsl/: query.py
archetype/plugin/: pytest_plugin.py
archetype/rules/: boundaries.py  cycles.py  layers.py  naming.py
examples/django/: architecture.py
examples/django/billing/: __init__.py  models.py  services.py
examples/django/users/: models.py
tests/: test_cli.py  test_decorator_since.py  test_dsl.py  test_graph.py  test_plugin.py  test_reporter.py  test_rule.py  test_rules_cycles.py  test_rules_layers.py
