[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archetype-py"
version = "0.3.0"
description = "Enforce architectural rules as code. Catch structural violations before they merge."
readme = { file = "PYPI.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [
  { name = "Mossab Arektout", email = "mossabarektout2000@gmail.com" },
]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "networkx",
  "click",
  "rich",
]

[project.urls]
Homepage = "https://github.com/MossabArektout/archetype-py"
Documentation = "https://github.com/MossabArektout/archetype-py"

[project.optional-dependencies]
dev = [
  "pytest",
  "hatch",
]
# Benchmarks are run with `python benchmarks/run_benchmarks.py`
# and regression tests with `pytest -m benchmark`.
benchmarks = []

[project.scripts]
archetype = "archetype.check:cli"

[project.entry-points.pytest11]
archetype = "archetype.plugin.pytest_plugin"

[tool.hatch.build.targets.wheel]
packages = ["archetype"]

[tool.pytest.ini_options]
addopts = "-m \"not benchmark\""
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "benchmark: marks tests as benchmarks (deselect with '-m not benchmark')",
]
